update config template

--- a/config/config_template.json
+++ b/config/config_template.json
@@ -16,8 +16,8 @@
   "software": {
     "general": {
       "aws_access": {
-        "aws_access_key_id": "LIMITED_USER_ACCESS_KEY_ID",
-        "aws_secret_access_key": "LIMITED_USER_SECRECT_ACCESS_KEY",
+        "access_key_id": "LIMITED_USER_ACCESS_KEY_ID",
+        "secret_access_key": "LIMITED_USER_SECRECT_ACCESS_KEY",
       }
     },
     "cordra": {
