--- a/ansible/roles/cordra/tasks/main.yml
+++ b/ansible/roles/cordra/tasks/main.yml
@@ -7,6 +7,16 @@
     - import_tasks: 02-configure_network.yml
       tags: [configure_network]
 
+    - import_tasks: update_app_checker.yml
+      vars:
+        app_dir: "{{ cordra.dir }}"
+        app_version: "{{ cordra.version }}"
+        output_fact: cordra_will_update
+
+    - import_tasks: u1-prepare_for_update.yml
+      when: cordra_will_update
+      tags: [prepare_for_update]
+
     - import_tasks: 03-setup_cordra.yml
       tags: [setup_cordra]
 
