--- a/ansible/roles/elasticsearch/tasks/03-setup_elasticsearch.yml
+++ b/ansible/roles/elasticsearch/tasks/03-setup_elasticsearch.yml
@@ -19,6 +19,12 @@
         creates: "{{ elasticsearch.dir }}"
       when: elasticsearch_download.changed
 
+    - name: Persist installed elasticserch version in file for update control
+      copy:
+        dest: "{{ elasticsearch.dir + server.apps_version_file_suffix }}"
+        content: "{{ elk_version }}"
+        force: no
+
     - name: Configure Elasticsearch on {{ inventory_hostname }}
       template:
         src: "{{ item.src }}"
@@ -59,19 +65,18 @@
         src: systemd/elasticsearch.service.j2
         dest: /etc/systemd/system/elasticsearch.service
       when: elasticsearch_download.changed
-      register: elasticsearch_service
 
     - name: Force systemd to reload configs on {{ inventory_hostname }}
       systemd:
         daemon_reload: yes
-      when: elasticsearch_service.changed
+      when: elasticsearch_download.changed
 
     - name: Enable/Start Elasticsearch service on {{ inventory_hostname }}
       systemd:
         name: elasticsearch.service
         enabled: yes
         state: started
-      when: elasticsearch_service.changed
+      when: elasticsearch_download.changed
 
   become: true
   become_user: root
