--- a/ansible/roles/elasticsearch/tasks/main.yml
+++ b/ansible/roles/elasticsearch/tasks/main.yml
@@ -6,6 +6,11 @@
     - import_tasks: 02-configure_network.yml
       tags: [configure_network]
 
+    # elasticsearch_will_update was initially generated as a fact in site.yml
+    - import_tasks: u1-prepare_for_update.yml
+      when: elasticsearch_will_update
+      tags: [prepare_for_update]
+
     - import_tasks: 03-setup_elasticsearch.yml
       tags: [setup_elasticsearch]
 
