--- a/config/config_template.json
+++ b/config/config_template.json
@@ -14,6 +14,7 @@
     }
   },
   "software": {
+    "update_applications": true,
     "general": {
       "aws_access": {
         "access_key_id": "LIMITED_USER_ACCESS_KEY_ID",
