--- a/ansible/roles/cordra/tasks/main.yml
+++ b/ansible/roles/cordra/tasks/main.yml
@@ -10,7 +10,7 @@
     - import_tasks: update_app_checker.yml
       vars:
         app_dir: "{{ cordra.dir }}"
-        app_version: "{{ cordra.version }}"
+        app_version: "{{ cordra_version }}"
         output_fact: cordra_will_update
 
     - import_tasks: u1-prepare_for_update.yml
