implement dynamic updates for elk-stack

--- a/ansible/roles/filebeat/tasks/02-setup_filebeat.yml
+++ b/ansible/roles/filebeat/tasks/02-setup_filebeat.yml
@@ -25,6 +25,12 @@
         creates: "{{ filebeat.dir }}"
       when: filebeat_download.changed
 
+    - name: Persist installed filebeat version in file for update control
+      copy:
+        dest: "{{ filebeat.dir + server.apps_version_file_suffix }}"
+        content: "{{ elk_version }}"
+        force: no
+
     - name: Config Filebeat filebeat.yml on {{ inventory_hostname }}
       template:
         src: "filebeat/filebeat.yml.j2"
@@ -36,19 +42,18 @@
         src: systemd/filebeat.service.j2
         dest: /etc/systemd/system/filebeat.service
       when: filebeat_download.changed
-      register: filebeat_service
 
     - name: Force systemd to reload configs on {{ inventory_hostname }}
       systemd:
         daemon_reload: yes
-      when: filebeat_service.changed
+      when: filebeat_download.changed
 
     - name: Enable/Start Filebeat service on {{ inventory_hostname }}
       systemd:
         name: filebeat.service
         enabled: yes
         state: started
-      when: filebeat_service.changed
+      when: filebeat_download.changed
 
   become: true
   become_user: root
