--- a/ansible/roles/kibana/tasks/03-setup_kibana.yml
+++ b/ansible/roles/kibana/tasks/03-setup_kibana.yml
@@ -25,6 +25,12 @@
         creates: "{{ kibana.dir }}"
       when: kibana_download.changed
 
+    - name: Persist installed kibana version in file for update control
+      copy:
+        dest: "{{ kibana.dir + server.apps_version_file_suffix }}"
+        content: "{{ elk_version }}"
+        force: no
+
     - name: Config Kibana installation on {{ inventory_hostname }}
       template:
         src: "kibana/kibana.yml.j2"
@@ -36,19 +42,18 @@
         src: systemd/kibana.service.j2
         dest: /etc/systemd/system/kibana.service
       when: kibana_download.changed
-      register: kibana_service
 
     - name: Force systemd to reload configs on {{ inventory_hostname }}
       systemd:
         daemon_reload: yes
-      when: kibana_service.changed
+      when: kibana_download.changed
 
     - name: Enable/Start Kibana service on {{ inventory_hostname }}
       systemd:
         name: kibana.service
         enabled: yes
         state: started
-      when: kibana_service.changed
+      when: kibana_download.changed
 
   become: true
   become_user: root
