--- a/ansible/roles/kibana/tasks/main.yml
+++ b/ansible/roles/kibana/tasks/main.yml
@@ -6,6 +6,16 @@
     - import_tasks: 02-configure_network.yml
       tags: [configure_network]
 
+    - import_tasks: update_app_checker.yml
+      vars:
+        app_dir: "{{ kibana.dir }}"
+        app_version: "{{ elk_version }}"
+        output_fact: kibana_will_update
+
+    - import_tasks: u1-prepare_for_update.yml
+      when: kibana_will_update
+      tags: [prepare_for_update]
+
     - import_tasks: 03-setup_kibana.yml
       tags: [setup_kibana]
 
