--- a/ansible/roles/grafana/tasks/main.yml
+++ b/ansible/roles/grafana/tasks/main.yml
@@ -6,6 +6,16 @@
     - import_tasks: 02-configure_network.yml
       tags: [configure_network]
 
+    - import_tasks: update_app_checker.yml
+      vars:
+        app_dir: "{{ grafana.dir }}"
+        app_version: "{{ grafana_version }}"
+        output_fact: grafana_will_update
+
+    - import_tasks: u1-prepare_for_update.yml
+      when: grafana_will_update
+      tags: [prepare_for_update]
+
     - import_tasks: 03-setup_grafana.yml
       tags: [setup_grafana]
 
