--- a/ansible/roles/node_exporter/tasks/main.yml
+++ b/ansible/roles/node_exporter/tasks/main.yml
@@ -6,6 +6,16 @@
     - import_tasks: 02-configure_network.yml
       tags: [configure_network]
 
+    - import_tasks: update_app_checker.yml
+      vars:
+        app_dir: "{{ node_exporter.dir }}"
+        app_version: "{{ node_exporter_version }}"
+        output_fact: node_exporter_will_update
+
+    - import_tasks: u1-prepare_for_update.yml
+      when: node_exporter_will_update
+      tags: [prepare_for_update]
+
     - import_tasks: 03-setup_node_exporter.yml
       tags: [setup_node_exporter]
 
