--- a/ansible/roles/prometheus/tasks/main.yml
+++ b/ansible/roles/prometheus/tasks/main.yml
@@ -6,6 +6,16 @@
     - import_tasks: 02-configure_network.yml
       tags: [configure_network]
 
+    - import_tasks: update_app_checker.yml
+      vars:
+        app_dir: "{{ prometheus.dir }}"
+        app_version: "{{ prometheus_version }}"
+        output_fact: prometheus_will_update
+
+    - import_tasks: u1-prepare_for_update.yml
+      when: prometheus_will_update
+      tags: [prepare_for_update]
+
     - import_tasks: 03-setup_prometheus.yml
       tags: [setup_prometheus]
 
