--- a/ansible/restore_backup.yml
+++ b/ansible/restore_backup.yml
@@ -56,7 +56,7 @@
           with_items:
             - "mkdir /tmp/mongodb_backup_dir"
             - "tar -xf /tmp/{{ backup_file_name.stdout }} -C /tmp/mongodb_backup_dir/"
-            - "{{ mongodb.dir }}/bin/mongorestore -h {{mongodb.host_ip}} --port {{mongodb.port}} -u root --password {{ mongodb.admin_password }} --authenticationDatabase admin --drop /tmp/mongodb_backup_dir"
+            - "{{ mongodb.database_tools.dir }}/bin/mongorestore -h {{mongodb.host_ip}} --port {{mongodb.port}} -u root --password {{ mongodb.admin_password }} --authenticationDatabase admin --drop /tmp/mongodb_backup_dir"
             - "rm /tmp/{{ backup_file_name.stdout }}"
             - "rm -r /tmp/mongodb_backup_dir"
       rescue:
