--- a/ansible/roles/mongodb/tasks/02-configure_network.yml
+++ b/ansible/roles/mongodb/tasks/02-configure_network.yml
@@ -7,11 +7,9 @@
         state: enabled
         rule: allow
         proto: tcp
-        from_ip: any
+        from_ip: "{{ server.private_ip4_range_cidr }}"
         to_ip: any
-        port : '{{ item }}'
-      with_items:
-        - "{{mongodb.port}}"
+        port : "{{ mongodb.port }}"
 
   become: true
   become_user: root
