--- a/ansible/roles/node_exporter/tasks/02-configure_network.yml
+++ b/ansible/roles/node_exporter/tasks/02-configure_network.yml
@@ -7,7 +7,7 @@
         state: enabled
         rule: allow
         proto: tcp
-        from_ip: any
+        from_ip: "{{ server.private_ip4_range_cidr }}"
         to_ip: any
         port : '{{ item }}'
       with_items:
