--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -64,6 +64,11 @@
   roles:
     - mongodb
 
+- name: Include playbook to restore mongodb from the backup
+  import_playbook: restore_backup.yml
+  tags: [restore_backup]
+  when: server.restore_db_backup_after_setup or hostvars['db_server']['mongodb_will_update']
+
 - hosts: search_engine_servers
   gather_facts: yes
   roles:
@@ -87,8 +92,3 @@
   gather_facts: yes
   roles:
     - ds_viewer
-
-- name: Include playbook to restore mongodb from the backup
-  import_playbook: restore_backup.yml
-  tags: [restore_backup]
-  when: server.restore_db_backup_after_setup
